[metadata]
name = od-metrics   
version = 1.1.1
author = EMalagoli92             
author_email = emala.892@gmail.com
description = Object Detection metrics.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/EMalagoli92/OD-metrics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]                   
package_dir =
    = src
packages = find:       
python_requires = >=3.9
install_requires =
    numpy==1.24.3
    parameterized==0.9.0
    pydantic==2.5.2

[options.packages.find]
where = src
   
[pylint.message_control]
disable =
    R0913,
    R0914,
    R0903

[pylint.MASTER]
init-hook="import sys; sys.path.append('./')"

[mypy]
plugins = 
  pydantic.mypy